refactor: change payment method router permission
